--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://github.com/NasheetaJacobs1999/Group4.git/images/nailsalon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/NasheetaJacobs1999/Group4.git" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/style.css">
     <title>Nail Salon</title>
 </head>
 <body>
-    <img src="https://github.com/NasheetaJacobs1999/Group4.git/images/nailsalon.png"
+    <img src="https://github.com/NasheetaJacobs1999/Group4.git"
     alt="logo">
     <main>
         <p id="first">
