--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://github.com/NasheetaJacobs1999/Group4.git" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>Nail Salon</title>
+    <title>Funko Pops</title>
 </head>
 <body>
     <img src="https://github.com/NasheetaJacobs1999/Group4.git"
