--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://github.com/NasheetaJacobs1999/Group4.git" type="image/x-icon">
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Funko Pops</title>
 </head>
 <body>
