Add home content

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- tab icon -->
     <link
       rel="shortcut icon"
       href="https://github.com/NasheetaJacobs1999/Group4.git"
       type="image/x-icon"
     />
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jersey+25&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- external stylesheet -->
     <link rel="stylesheet" href="/css/style.css" />
     <title>Funko Pops</title>
   </head>
@@ -17,7 +29,28 @@
     </header>
     <main>
       <section id="hero">
-        
+        <div>
+          <p class="business-name center-text">Funko Pops</p>
+        </div>
+      </section>
+      <section id="business-description">
+        <div class="business-description-container center-text">
+          <div class="business-description-image description-item">
+            <img
+              src="https://robynainsley21.github.io/images/group4images/tshirtImage.jpg"
+              alt="tshirtImage"
+            />
+          </div>
+          <div class="description-text description-item">
+            <h2>What we do</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+              odio minima dolorum aut natus laborum deleniti! Cumque deleniti
+              vero error omnis eveniet architecto, a libero cum atque commodi
+              voluptate harum!
+            </p>
+          </div>
+        </div>
       </section>
     </main>
   </body>
