The Navbar Code. Its not responsive

--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
       href="https://github.com/NasheetaJacobs1999/Group4.git"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Funko Pops</title>
   </head>
   <body>
     <header>
+      <nav class="header">
+
+        <!-- LOGO -->
+        <div class="logo">
+          <img src="images/funkoLogo.png" alt=""><a "#home"></a></img>
+        </div>
+
+        <!-- NAV LINKS -->
+        <ul>
+          <li><a href="#home" id="#home">Home</a></li>
+          <li><a href="pages/products.html">Products</a></li>
+          <li><a href="pages/about.html">About</a></li>
+        </ul>
+      </nav>
       <!-- navbar to be put here -->
     </header>
     <main>
