--- a/pages/about.html
+++ b/pages/about.html
@@ -5,9 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="header">
+  
+          <!-- LOGO -->
+          <div class="logo">
+            <img src="../images/funkoLogo.png" alt=""><a "#Home"></a></img>
+          </div>
+  
+          <!-- NAV LINKS -->
+          <ul>
+            <li><a href="../index.html" id="#home">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="#about">About</a></li>
+          </ul>
+        </nav>
+        <!-- navbar to be put here -->
+      </header>
+      <main> 
 </body>
 </html>
