--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
       rel="stylesheet"
     />
 
+    <!-- bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+
     <!-- external stylesheet -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href=" css/style.css" />
     <title>Funko Pops</title>
   </head>
   <body>
@@ -37,7 +43,7 @@
         <div class="business-description-container center-text">
           <div class="business-description-image description-item">
             <img
-              src="https://robynainsley21.github.io/images/group4images/tshirtImage.jpg"
+              src="https://robynainsley21.github.io/images/group4images/ivan-moncada-dyBavEKJNHQ-unsplash.jpg"
               alt="tshirtImage"
             />
           </div>
@@ -52,6 +58,67 @@
           </div>
         </div>
       </section>
+      <section id="sample-products" class="center-text">
+        <h2>A variety from different universes</h2>
+        <div class="products-container">
+          <img
+            class="sample-image sample1"
+            src="https://robynainsley21.github.io/images/group4images/dimitris-chapsoulas-GaJDRh4gadc-unsplash.jpg" alt="image"
+          />
+          <img
+            class="sample-image sample2"
+            src="https://robynainsley21.github.io/images/group4images/florentine-pautet-1IcXJAHnFq8-unsplash.jpg"
+            alt="image"
+          />
+          <img
+            class="sample-image sample3"
+            src="https://robynainsley21.github.io/images/group4images/jannik-selz-vtkQTNrJ2cs-unsplash.jpg"
+            alt="image"
+          />
+          <img
+            class="sample-image sample4"
+            src="https://robynainsley21.github.io/images/group4images/nathalia-arantes-3aF6LlaCo38-unsplash.jpg"
+            alt="image"
+          />
+          <img
+            class="sample-image sample5"
+            src="https://robynainsley21.github.io/images/group4images/scott-gummerson-_5Q1-ae44aw-unsplash.jpg"
+            alt="image"
+          />
+          <!-- <img
+            class="sample-image sample6"
+            src="https://robynainsley21.github.io/images/group4images/wtfast-LVumoQTOHKM-unsplash.jpg"
+            alt="image"
+          /> -->
+          <img
+            class="sample-image sample7"
+            src="https://robynainsley21.github.io/images/group4images/debashis-rc-biswas-u3gLUQSrbdA-unsplash.jpg"
+            alt="image"
+          />
+        </div>
+      </section>
+      <section id="design-shirt-section" class="center-text">
+        <h2>Choose your funko</h2>
+        <div class="card" style="width: 18rem">
+          <img
+            src="https://robynainsley21.github.io/images/group4images/halfcut-pokemon-WC_Qjaryv4Y-unsplash.jpg"
+            class="card-img-top"
+            alt="plain-shirt"
+          />
+          <div class="card-body">
+            <button  class="see-designs-btn">
+              <a href="pages/products.html" class="btn">See more</a>
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
+
+  <footer>
+
+  </footer>
 </html>
