Clean up styling

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </section>
       <section id="design-shirt-section" class="center-text">
         <h2>Choose your funko</h2>
-        <div class="card" style="width: 18rem">
+        <div class="card">
           <img
             src="https://robynainsley21.github.io/images/group4images/halfcut-pokemon-WC_Qjaryv4Y-unsplash.jpg"
             class="card-img-top"
