--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- tab icon -->
-    <link
+    <!-- <link
       rel="shortcut icon"
       href="https://github.com/NasheetaJacobs1999/Group4.git"
       type="image/x-icon"
-    />
+    /> -->
+
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- external stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- google fonts -->
@@ -19,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Jersey+25&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lobster&display=swap"
       rel="stylesheet"
     />
-    <title>Funko Pops</title>
+    <title>Funko Pops | Home</title>
   </head>
   <body>
     <header>
@@ -118,10 +125,7 @@
           </div>
         </div>
       </section>
-    </main>
-
-    <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    </main> 
   </body>
 
   <footer>
