Edited homepage, Robyn will probably edit it further if I don't

--- a/index.html
+++ b/index.html
@@ -54,15 +54,19 @@
       </section>
       <section id="business-description">
         <div class="business-description-container center-text">
-          <div class="business-description-image description-item">
+          <div class="description-item">
             <img
               src="https://robynainsley21.github.io/images/group4images/ivan-moncada-dyBavEKJNHQ-unsplash.jpg"
               alt="tshirtImage"
             />
           </div>
           <div class="description-text description-item">
-            <h2>What we do</h2>
+            <h1>What We Do</h1>
             <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+              odio minima dolorum aut natus laborum deleniti! Cumque deleniti
+              vero error omnis eveniet architecto, a libero cum atque commodi
+              voluptate harum!
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
               odio minima dolorum aut natus laborum deleniti! Cumque deleniti
               vero error omnis eveniet architecto, a libero cum atque commodi
@@ -72,7 +76,7 @@
         </div>
       </section>
       <section id="sample-products" class="center-text">
-        <h2>A variety from different universes</h2>
+        <h1 class="header-black">CHOOSE FROM A VARIETY OF UNIVERSES</h1>
         <div class="products-container">
           <img
             class="sample-image sample1"
@@ -98,20 +102,21 @@
             src="https://robynainsley21.github.io/images/group4images/scott-gummerson-_5Q1-ae44aw-unsplash.jpg"
             alt="image"
           />
-          <!-- <img
+          <img
             class="sample-image sample6"
             src="https://robynainsley21.github.io/images/group4images/wtfast-LVumoQTOHKM-unsplash.jpg"
             alt="image"
-          /> -->
+          />
           <img
             class="sample-image sample7"
             src="https://robynainsley21.github.io/images/group4images/debashis-rc-biswas-u3gLUQSrbdA-unsplash.jpg"
             alt="image"
           />
+          <div class="sample-image sample8"></div>
         </div>
       </section>
-      <section id="design-shirt-section" class="center-text">
-        <h2>Choose your funko</h2>
+      <section id="design-funko-section" class="center-text">
+        <h1 class="header-black">Make Your Own</h1>
         <div class="card">
           <img
             src="https://robynainsley21.github.io/images/group4images/halfcut-pokemon-WC_Qjaryv4Y-unsplash.jpg"
