--- a/pages/products.html
+++ b/pages/products.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Funko Pops | Products</title>
 
     <link rel="stylesheet" href="../css/style.css">
@@ -27,4 +29,23 @@
       </header>
       <main>
 </body>
+<footer>
+
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <a href="#home" class="col-md-4 d-flex mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <img src="images/funkoLogo.png" class="FLogo" alt="logo">
+      </a>
+      <p class="col-md-4 mb-0 text-white align-items-center justify-content-center">&copy; 2024 FunkoPop, Inc</p>
+  
+  
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="#home" class="nav-link px-2 text-white">Home</a></li>
+        <li class="nav-item"><a href="pages/about.html" class="nav-link px-2 text-white">Products</a></li>
+        <li class="nav-item"><a href="pages/products.html" class="nav-link px-2 text-white">About</a></li>
+      </ul>
+    </footer>
+  </div>
+
+</footer>
 </html>
